--- a/index.html
+++ b/index.html
@@ -2,12 +2,6 @@
 <html lang="en">
 
   <head>
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://arilt.github.io/diah-wedding/" />
-<meta property="twitter:title" content="Diah & Harli Wedding" />
-<meta property="twitter:description" content="Minggu, 05 Mei 2024" />
-<meta property="twitter:image" content="https://i.postimg.cc/nV4mPHy5/IMG-20240421-WA0003.jpg" />
-
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Diah & Ansar Wedding</title>
@@ -44,7 +38,7 @@
           <h3 class="animate__animated animate__slideInDown">Kepada <span></span></h3>
           <p class="animate__animated animate__zoomIn">BEGIN</p>
           <div class="simply-countdown animate__animated animate__zoomIn"></div>
-          <button id="tomb" onclick="enableScroll (), location.href='#home'">Buka
+          <button id="tomb" onclick="enableScroll ()">Buka
             <div class="star-1">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="25" height="25">
             <path fill="#00aeff" d="M427.313,88.686c-47.803-47.803-125.213-47.803-173.016,0l-17.087,17.087l-17.087-17.087
@@ -205,7 +199,7 @@
             <img src="img/images.png" alt="Diah Ramayanti" class="img-responsive rounded-circle">
           </div>
           <div class="col-8 ansar">
-            <h3 style="margin-top: 2rem;">Harliansyar. M.A</h3>
+            <h3>Harliansyar. M.A</h3>
             <p style="margin-top: -30px;">Anak Kedua dari Bpk. Muhammad Ali <br> & <br> Ibu Haspah</p>
             <a href="https://www.instagram.com/harliansyar_/" target="_blank" class="btn btn my-3">
               <p>@harliansyar_</p>
